After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 751008 - JNI: jaw_table_add_column_selection is missing.
JNI: jaw_table_add_column_selection is missing.
Status: RESOLVED FIXED
Product: java-atk-wrapper
Classification: Applications
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Magdalen Berns (irc magpie)
java-atk-wrapper maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-06-15 17:00 UTC by Magdalen Berns (irc magpie)
Modified: 2015-06-16 17:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to address problem (2.60 KB, patch)
2015-06-15 17:07 UTC, Magdalen Berns (irc magpie)
committed Details | Review

Description Magdalen Berns (irc magpie) 2015-06-15 17:00:08 UTC
The AtkTable interface has a add_column_selection pointer which is not made use of in the wrapper.[1]

There isn't a "direct translation" for add_row_selection in AccessibleTable.[2]

[1] https://git.gnome.org/browse/atk/tree/atk/atktable.h#n102
[2] http://docs.oracle.com/javase/7/docs/api/javax/accessibility/AccessibleSelection.html
Comment 1 Magdalen Berns (irc magpie) 2015-06-15 17:07:58 UTC
Created attachment 305328 [details] [review]
Patch to address problem