JNI: create jaw_table_add_column_selection

Bug: https://bugzilla.gnome.org/show_bug.cgi?id=751008