jni/src/jawtable.c
@@ -67,6 +67,8 @@ static gboolean			jaw_table_is_selected			(AtkTable	*table,
 									 gint		column);
 static gboolean jaw_table_add_row_selection(AtkTable  *table,
                                             gint       row);
+static gboolean jaw_table_add_column_selection(AtkTable  *table,
+                                               gint      column);
 
 typedef struct _TableData {
 	jobject atk_table;
@@ -97,6 +99,7 @@ jaw_table_interface_init (AtkTableIface *iface)
 	iface->is_row_selected = jaw_table_is_row_selected;
 	iface->is_selected = jaw_table_is_selected;
   iface->add_row_selection= jaw_table_add_row_selection;
+  iface->add_column_selection= jaw_table_add_column_selection;
 }
 
 gpointer
@@ -518,6 +521,24 @@ jaw_table_add_row_selection(AtkTable *table, gint row)
   jclass classAtkTable = (*jniEnv)->FindClass(jniEnv, "org/GNOME/Accessibility/AtkTable");
   jmethodID jmid = (*jniEnv)->GetMethodID(jniEnv, classAtkTable, "addRowSelection", "(I)Z");
   jboolean jselected = (*jniEnv)->CallBooleanMethod(jniEnv, atk_table, jmid, (jint)row);
+
+  if (jselected == JNI_TRUE)
+    return TRUE;
+
+  return FALSE;
+}
+
+static gboolean
+jaw_table_add_column_selection(AtkTable *table, gint column)
+{
+  JawObject *jaw_obj = JAW_OBJECT(table);
+  TableData *data = jaw_object_get_interface_data(jaw_obj, INTERFACE_TABLE);
+  jobject atk_table = data->atk_table;
+
+  JNIEnv *jniEnv = jaw_util_get_jni_env();
+  jclass classAtkTable = (*jniEnv)->FindClass(jniEnv, "org/GNOME/Accessibility/AtkTable");
+  jmethodID jmid = (*jniEnv)->GetMethodID(jniEnv, classAtkTable, "addColumnSelection", "(I)Z");
+  jboolean jselected = (*jniEnv)->CallBooleanMethod(jniEnv, atk_table, jmid, (jint)column);
 
   if (jselected == JNI_TRUE)
     return TRUE;
